# WealthOS

./: AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/app/: __init__.py  config.py  main.py  models.py  orchestrator.py
services/orchestrator/app/advisory/: __init__.py  alerts.py  copilot.py  llm_client.py
services/orchestrator/app/analytics/: __init__.py  assembler.py  engine.py  wellness.py
services/orchestrator/app/data/: __init__.py  clients.py  research_index.py
services/orchestrator/app/events/: __init__.py  pipeline.py
services/orchestrator/app/routes/: alerts.py  planning.py  research.py  v2.py
services/orchestrator/app/tools/: __init__.py  client_data.py  market_data.py  planning_calculators.py  research_store.py
services/orchestrator/app/workflows/: __init__.py  alerts.py  planning.py  research.py
services/orchestrator/data/: client_profile.json  entity_security_map.json  seeded_alerts.json  seeded_copilot.json  seeded_events.json
services/orchestrator/data/clients/: alex_chen.json  david_lim.json  priya_sharma.json
services/orchestrator/data/research_corpus/: asia-tech-equity-outlook.md  (+2 more)
services/orchestrator/tests/: test_alerts.py  test_analytics_engine.py  test_assembler.py  test_bm25_search.py  test_client_data.py  test_clients_loader.py  test_event_pipeline.py  test_golden_path.py  test_health.py  test_llm_client.py  test_orchestrator.py  test_planning_calculators.py  test_research_store.py  test_v2_endpoints.py  test_wellness.py
(+47 files in other folders)
