[project]
name = "wealthos-orchestrator"
version = "0.1.0"
description = "Small FastAPI orchestration service for WealthOS hackathon workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=1.0,<2.0",
  "rank-bm25>=0.2.2,<1.0",
  "uvicorn>=0.34,<1.0",
  "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.0,<10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
